--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -25,7 +25,8 @@ include(GrPlatform) #define LIB_SUFFIX
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 list(APPEND zynq_sources
-    fir_filter_ii_impl.cc )
+    fir_filter_ii_impl.cc
+    fir_filter_ic_impl.cc )
 
 add_library(gnuradio-zynq SHARED ${zynq_sources})
 target_link_libraries(gnuradio-zynq ${Boost_LIBRARIES} ${GRUEL_LIBRARIES} ${GNURADIO_CORE_LIBRARIES} ${UDEV_LIBRARIES})
