--- a/include/zynq/CMakeLists.txt
+++ b/include/zynq/CMakeLists.txt
@@ -23,5 +23,6 @@
 install(FILES
     api.h
     fir_filter_ii.h
-    fir_filter_ic.h DESTINATION include/zynq
+    fir_filter_ic.h
+    fir_filter_cc.h DESTINATION include/zynq
 )
