--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -26,7 +26,8 @@ include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 list(APPEND zynq_sources
     fir_filter_ii_impl.cc
-    fir_filter_ic_impl.cc )
+    fir_filter_ic_impl.cc
+    fir_filter_cc_impl.cc )
 
 add_library(gnuradio-zynq SHARED ${zynq_sources})
 target_link_libraries(gnuradio-zynq ${Boost_LIBRARIES} ${GRUEL_LIBRARIES} ${GNURADIO_CORE_LIBRARIES} ${UDEV_LIBRARIES})
